--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "api": "json-server -w ./fakeApi/db.json --routes fakeApi/routes.json"
+    "api": "json-server -w ./fakeApi/db.json --routes fakeApi/routes.json",
+    "start": "npm run api & npm run dev"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
